--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
                 </tr>
             {% for server in servers %}
                 <tr>
-                    <td class="server-name">{{ server.server_name }}</td>
-                    <td>{{  }}</td>
+                    <td class="server-name">{{ server[0].server_name }}</td>
+                    <td>{{ renderutils.get_top_player(server[1]).user.last_seen_name }}</td>
                 </tr>
             {% endfor %}
         </table>
