--- a/templates/_layout/with_navbar.html
+++ b/templates/_layout/with_navbar.html
@@ -1,7 +1,7 @@
 {% extends "_layout/base.html" %}
 
 {% block body %}
-    <div class="container">
+    <div class="container-fluid">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
