--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,23 @@
 {% extends "_layout/with_navbar.html" %}
 
 {% block content %}
-    <div class="container">
         <table class="table table-bordered table-striped">
                 <tr>
-                    <th width="60%">Server</th>
+                    <th width="50%">Server</th>
+                    <th width="10%">Players</th>
                     <th width="20%">Top Player</th>
                     <th width="20%">Total Points</th>
                 </tr>
             {% for server in servers %}
                 <tr>
                     <td class="server-name">{{ server[0].server_name }}</td>
+                    <td>
+                        <span style="color:
+                        {% if server[0].player_count == server[0].max_players %}red{% else %}#0080C0">{% endif %}
+                        {{ server[0].player_count }} / {{ server[0].max_players }}
+                    </span></td>
                     <td>{{ renderutils.get_top_player(server[1]).user.last_seen_name }}</td>
                 </tr>
             {% endfor %}
         </table>
-    </div>
 {% endblock %}
