--- a/static/css/site.css
+++ b/static/css/site.css
@@ -50,6 +50,14 @@ body {
     text-align: center;
 }
 
+.tcenter {
+    text-align: center;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 td.server-name {
     font-weight: bold;
     font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', Courier, monospace;
